[package]
name = "main"
version = "0.1.0"
authors = ["Xophe <christophe.dousson@orange.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libloading = "0.6"

[dependencies.simple_logger]
default-features = false
version = "1"
